feat: Add WhatsApp button, navigation, Diferenciais section, and favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dra. Gessica Miranda | Estética Avançada</title>
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico?v=3" />
+
   <!-- Fonts: Playfair Display (Titles), Inter (Body), Allura (Elegant Script), Cormorant Garamond (Sophisticated) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
